Keep font-size from getting bigger on iPhone after rotation. Fixed null object error.

--- a/client/src/application.scss
+++ b/client/src/application.scss
@@ -17,6 +17,7 @@ html, body {
     bottom: 0;
     overflow: hidden;
     margin: 0;
+    -webkit-text-size-adjust: 100%;
 }
 
 body {
